--- a/index.html
+++ b/index.html
@@ -1,18 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link rel="stylesheet" href="assets/style.css" />
-    <title>TaskMaster</title>
-  </head>
 
-  <body>
-    <script src="app/main.js" type="module"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="assets/style.css" />
+  <title>TaskMaster</title>
+</head>
+<body>
+<div class="container-fluid">
+  <div class="row" id="add-list-row">
+    <div class="col-4">
+      <button role="button" class="btn btn-primary" data-toggle="modal" data-target="#list-modal">Add a New List of
+        Tasks
+      </button>
+    </div>
+    <!--Modal!!!!!!!!!!!!!!!!!!!!-->
+    <div class="modal fade" id="list-modal" tabindex="-1" role="dialog" aria-labeledby="modelTitleId"
+      aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Add a New Task</h5>
+            <button type="button" class="close" data-dismiss="modal" arial-label="close"><span
+                aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            Just add a a category and a date that you should have this done by. You can add specific tasks in a moment!
+            <form onsubmit="app.ListController.addList(event)">
+              <div class="form-group">
+                <label for="category">Category</label>
+                <input type="text" name="category" class="form-control" placeholder="Enter a category here..." required>
+              </div>
+              <div class="form-group">
+                <label for="dueDate">Due On:</label>
+                <input type="text" name="dueAt" class="form-control" placeholder="When do you have to finish this by?">
+              </div>
+            </form>
+          </div>
+          <button type="submit" class="btn btn-primary">Save</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row" id="tasklists"></div>
+</div>
+
+<!--Bootstrap scripts-->
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+<script src="app/main.js" type="module"></script>
+</body>
+
 </html>
