cannot find html problem

--- a/index.html
+++ b/index.html
@@ -37,12 +37,8 @@
                 <input name="category"  type="text" class="form-control" placeholder="Enter a category here..." required>
               </div>
               <div class="form-group">
-                <label for="dueDate">Due On:</label>
+                <label for="dueDate">Due By:</label>
                 <input type="text" name="dueDate" class="form-control" placeholder="When do you have to finish this by?">
-              </div>
-              <div class="form-group">
-                <label for="tasks">Add just one thing you need to get done:</label>
-                <input type="text" name="tasks" class="form-control" placeholder="One thing to do">
               </div>
               <button type="submit" class="btn btn-primary">Save</button>
             </form>
